# https://https://gist.github.com/forkcs/76de0ea947a2fd27b131f9fa49bc1968

[metadata]
name = twinkle-py
version = 0.1
author = Fedor Soldatkin
author-email = fsoldatkin@yandex.ru
home-page = https://github.com/forkcs/twinkle-py
description = Python wrapper of twinkle sip client command line interface.
long-description = file: README.md
long-description-content-type: text/markdown
license = GNU GPL v3.0
license-file = LICENSE
platform = Linux
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU GPL v3.0
    Operating System :: Linux
    Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = twinkle_cli
test_suite = tests
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
